# GradientHound

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml
backend/: README.md  pyproject.toml
backend/src/gradienthound_server/: main.py
backend/src/gradienthound_server/api/: routes.py
backend/src/gradienthound_server/core/: checkpoint_loader.py  config.py
backend/src/gradienthound_server/models/: graph.py
backend/src/gradienthound_server/services/: graph_service.py
collector/: README.md  pyproject.toml
collector/src/gradienthound_collector/: __init__.py  checkpoint.py  collector.py  graph_extractor.py  types.py
docs/: index.md
docs/assets/stylesheets/: extra.css
examples/: simple_cnn.py  wandb_capture.py
frontend/: electron.vite.config.ts  package.json  pnpm-lock.yaml  tsconfig.node.json  tsconfig.web.json
frontend/src/main/: index.ts
frontend/src/preload/: index.d.ts  index.ts
frontend/src/renderer/: index.html
frontend/src/renderer/src/: App.tsx
frontend/src/renderer/src/api/: client.ts
frontend/src/renderer/src/assets/styles/: global.css
frontend/src/renderer/src/components/: GraphCanvas.tsx  NodeDetails.tsx  SearchBar.tsx  SidePanel.tsx  StatusBar.tsx  Toolbar.tsx
frontend/src/renderer/src/engine/: Camera.ts  CanvasEngine.ts  HitTester.ts  InputHandler.ts  LayoutEngine.ts  Renderer.ts  SceneGraph.ts  constants.ts  types.ts
frontend/src/renderer/src/store/: graphStore.ts  uiStore.ts
frontend/src/renderer/src/types/: api.ts  graph.ts
scripts/: sync_readme_to_docs.py
src/gradienthound/: __init__.py  __main__.py  _dash_app.py  _panel_app.py  _streamlit_app.py  checkpoint.py  core.py  export.py  graph.py  hooks.py  ipc.py  spectral.py
src/gradienthound/_dashboard/: __init__.py  _app.py  _constants.py  _graph.py  _health.py  _helpers.py  _page_architecture.py  _page_checkpoints.py  _page_dashboard.py  _page_distributions.py  _page_dynamics.py  _page_embeddings.py  _page_gradient_flow.py  _page_live.py  _page_on_demand.py  _page_overview.py  _page_raw_data.py  _page_spectral.py  _page_tools.py  _page_weight_health.py  _page_weightwatcher.py  _pages.py  _tool_registry.py  _wandb.py
src/gradienthound/_dashboard/assets/: sidebar.css
src/gradienthound/pages/: _common.py  architecture.py  dashboard.py  gradients.py  metrics.py  network_state.py  optimizer.py  training.py  weights.py
tests/: test_checkpoint_anomalies.py  test_graph.py  test_ipc.py
