[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gradienthound"
version = "0.1.0"
description = "Hook into ML training to visualize and inspect model architectures in real time"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "panel>=1.3",
    "bokeh>=3.3",
    "graphviz>=0.20",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
dash = ["dash>=2.14", "plotly>=5.18", "dash-cytoscape>=1.0", "dash-bootstrap-components>=1.5"]
dev = ["pytest>=8.0", "ruff>=0.4", "torch>=2.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/gradienthound"]

[tool.hatch.build]
include = [
    "src/gradienthound/assets/*.png",
]
