[project]
name = "gradienthound-collector"
version = "0.1.0"
description = "Checkpoint collector for GradientHound model visualization"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "torch>=2.0",
    "safetensors>=0.4",
    "packaging>=26.0",
    "numpy>=2.2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gradienthound_collector"]
